# Cpp_crow_server

./: CMakeLists.txt  main.cpp
static/: index.html  script.js  style.css
